cluster-cd/apps/bitty/downloads/prowlarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name prowlarr
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
    - name: metrics
      port: 8081
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
